feat: render Header component
keep components pure

--- a/src/components/Profile/index.css
+++ b/src/components/Profile/index.css
@@ -4,3 +4,9 @@ ul {
 
 .avatar { margin: 5px; border-radius: 50%; }
 
+.panel {
+    border: 1px solid #aaa;
+    border-radius: 6px;
+    margin-top: 20px;
+    padding: 10px;
+}
